<resources>
    <string name="app_name">Namaz Vakitleri</string>
    <string name="ayarlar">Ayarlar</string>
    <string name="bilgi">Bilgi</string>
    <string name="tesbih">Sanal Tesbih</string>
    <string name="tesbihat">Namaz Tesbihatı</string>
    <string name="yenile">Yenile</string>
    <string name="cevsen1">Cevşen</string>
    <string name="tamam">Tamam</string>
    <string name="manuel">Manuel Tesbih</string>
    <string name="cvsarapca">Arapça</string>
    <string name="cvsturkce">Türkçe</string>
    <string name="cvsmeal">Meal</string>
    <string name="kaydet">Tamam</string>
    <string name="cevsen">Cevşen</string>
    <string name="kuran">"Kuran-ı Kerim"</string>
    <string name="tecvid">Tecvid</string>
    <string name="veritabani">VeriTabani</string>
    <string name="anasayfa">Namaz Vakitleri</string>
    <string name="ilmihal">İlmihal</string>
    <string name="dualar">Dualar</string>
    <string name="uhud">Şüheda-i Uhud</string>
    <string name="bedir">Ashab-ı Bedir</string>
    <string name="zikirmatik">Zikirmatik</string>
    <string name="vakit">Namaz Vakitleri</string>
    <string name="sabah_ezan">Sabah Ezanı</string>
    <string name="ogle_ezan">Öğle Ezanı   </string>
    <string name="ikindi_ezan">İkindi Ezanı</string>
    <string name="aksam_ezan">Akşam Ezanı</string>
    <string name="yatsi_ezan">Yatsı Ezanı</string>
    <string name="sela_ezan">Sela Dinle</string>
    <string name="m_gun_gece_2020">MÜBAREK GÜN VE GECELER 2020</string>
    <string name="m_gun_gece_2021">MÜBAREK GÜN VE GECELER 2021</string>
    <string name="pusula">Pusula</string>
    <string name="ezan">Ezan Dinle</string>
    <string name="konum">Konum Seç</string>
    <string name="mubarek">Mübarek Gün ve Geceler</string>
    <string name="kizismi">kizismi</string>
    <string name="erkekismi">erkekismi</string>
    <string name="imsakiye">İmsakiye</string>
    <string name="yenileme">Yenile</string>
    <string name="isimler">İsim</string>
    <string name="ozlu_sozler">Özlü Sözler</string>
    <string name="hadis">Hadis-i Şerif</string>
    <string name="sunnet">Sünnet</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="ezan_dinle">Ezan Dinle</string>
    <string name="namaz_vakitlerini_goster">Namaz Vakitlerini Göster</string>
    <string name="k_z">Kız: </string>
    <string name="erkek">Erkek: </string>
    <string name="esmalar">Esmaü\'l-Hüsna</string>
    <string name="dua">Günlük Dua</string>
    <string name="ayeti_kerime">Ayet-i Kerime</string>
    <string name="hadisi_serif">Hadis-i Şerif</string>
    <string name="sunneti_seniyye">Sünnet-i Seniyye</string>
    <string name="haftalik_namaz_vakitleri">Haftalık Namaz Vakitleri</string>
    <string name="gunun_yemegi">Günün Yemeği</string>
    <string name="isim_onerisi">İsim Önerisi</string>
    <string name="html_title">

          <![CDATA[
                     <a><font color=#8B4789>Uygulama Kılavuzu</a>

                ]]>
      </string>
    <string name="html_cevsensayfasi">

          <![CDATA[
                     <a><font color=#8B4789>Cevşen Sayfası Ayarları</a>

                ]]>
      </string>
    <string name="html_kuransayfasi">

          <![CDATA[
                     <a><font color=#8B4789>Kuran Sayfası Ayarları</a>

                ]]>
      </string>
    <string name="html_kaydet">

          <![CDATA[
                     <a><font color=#8B4789>Kaydet</a>

                ]]>
      </string>
    <string name="html_progresbaslik">

          <![CDATA[
                    <a><font color=#00415c>Namaz Vakitleri</a>

                ]]>
      </string>
    <string name="html_progresmetin"><![CDATA[


                     <a><font color=#005d83>Bilgiler hazırlanıyor…</a>


      ]]></string>
    <string name="html_sayacbaslik">

          <![CDATA[
                     <a><font color=#8B4789>Sayacı Başa Al</a>

                ]]>
      </string>
    <string name="html_sayacmetin"><![CDATA[


                    <a><font color=#8B4789>Sanal Sayaç başa alınacak.</a>


      ]]></string>
    <string name="html_yonlendir">

          <![CDATA[
                     <a><font color=#8B4789>Sayfa Yönlendirme</a>

                ]]>
      </string>
    <string name="html_yonlendirmetin"><![CDATA[


                     <a><font color=#8B4789>Gitmek istediğiniz sayfayı seçiniz</a>


      ]]></string>
    <string-array name="kategoriler_ekle">
        <item>KURANDA PEYGAMBER DUALARI</item>
        <item>SABAH DUALARI</item>
        <item>AKŞAM DUALARI</item>
        <item>CUMA OKUNACAK DUALAR</item>
        <item>AŞİRLER</item>
        <item>ESMA-İ HÜSNA</item>
        <item>EFENDİMİZİN MUTAD OKUDUĞU SURELER</item>
        <item>GÜNLÜK DUALAR</item>
        <item>MÜBAREK GÜN VE GECELERDE YAPILACAK DUALAR</item>
        <item>MUHTELİF DUALAR</item>
        <item>HADİSLER</item>
        <item>BENİM SEÇTİKLERİM</item>
        <item>İLMİHAL</item>

    </string-array>
    <string-array name="kategori_pozisyon">

        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>


    </string-array>
    <string-array name="temalar">
        <item >Sayfa1</item>
        <item >Sayfa2</item>
        <item >Sayfa3</item>
        <item >Sayfa4</item>
        <item >Sayfa5</item>
        <item >Sayfa6</item>
        <item >Sayfa7</item>
        <item >Sayfa8</item>
        <item >Sayfa9</item>
        <item >Sayfa10</item>

    </string-array>
    <string-array name="tema_pozisyon">

        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>

    </string-array>
    <string name="html">

        <![CDATA[



                ]]>

    </string>
    <string name="bbm">Bunları Biliyor Muydunuz?</string>
    <string name="motivasyon">Motivasyon Sözü</string>
    <string name="mubarek_gun_geceler">Mübarek Gün ve Geceler</string>
    <string name="aylik_namaz_vakitleri">Aylık Namaz Vakitleri</string>
    <string name="sehir">Şehir</string>
    <string-array name="ayarlar_liste">

        <item>Konum Seç</item>
        <item>Ezan Ayarla</item>
        <item>Hakkında</item>
        <item>Yardım</item>
        <item>Bize Ulaşın</item>
        <item>Gizlilik Politikası</item>

    </string-array>
</resources>