<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/anasayfa"
        android:orderInCategory="1"
        android:title="@string/anasayfa"
        android:icon="@drawable/ic_home"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/ezan"
        android:orderInCategory="3"
        android:title="@string/ezan"
        android:icon="@drawable/ic_home"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/pusula"
        android:orderInCategory="3"
        android:title="@string/pusula"
        android:icon="@drawable/ic_home"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/konum"
        android:orderInCategory="3"
        android:title="@string/konum"
        android:icon="@drawable/ic_home"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/aylik"
        android:orderInCategory="3"
        android:title="@string/aylik_namaz_vakitleri"
        android:icon="@drawable/ic_home"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/mubarek"
        android:orderInCategory="3"
        android:title="@string/mubarek_gun_geceler"
        android:icon="@drawable/ic_home"
        app:showAsAction="never"
        />





</menu>