<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/arkaplan"
    android:background="@color/krem"
    android:layout_gravity="center"
    tools:context=".EzanDinle">

    <LinearLayout
        android:id="@+id/lay1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color3"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/sabahText"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/sabah_ezan"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textColor="@color/krem"
                android:padding="5dp"
                android:paddingStart="20dp"
                android:paddingLeft="20dp" />

            <Switch
                android:id="@+id/sabahSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:layout_gravity="center"
                android:textColor="@color/colorPrimary"
                android:gravity="center"
                android:textOff="@string/off"
                android:textOn="@string/on" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/ogleText"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/ogle_ezan"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textColor="@color/krem"
                android:padding="5dp"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                />

            <Switch
                android:id="@+id/ezanSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:layout_gravity="center"
                android:textColor="@color/colorPrimary"
                android:text=""
                android:gravity="center"
                android:textOff="@string/off"
                android:textOn="@string/on" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/ikindiText"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/ikindi_ezan"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textColor="@color/krem"
                android:padding="5dp"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                />

            <Switch
                android:id="@+id/ikindiSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:layout_gravity="center"
                android:textColor="@color/colorPrimary"
                android:text=""
                android:gravity="center"
                android:textOff="@string/off"
                android:textOn="@string/on" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/aksamText"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/aksam_ezan"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textColor="@color/krem"
                android:padding="5dp"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                />

            <Switch
                android:id="@+id/aksamSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:layout_gravity="center"
                android:textColor="@color/colorPrimary"
                android:text=""
                android:gravity="center"
                android:textOff="@string/off"
                android:textOn="@string/on" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/yatsiText"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/yatsi_ezan"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textColor="@color/krem"
                android:padding="5dp"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                />

            <Switch
                android:id="@+id/yatsiSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:layout_gravity="center"
                android:textColor="@color/colorPrimary"
                android:text=""
                android:gravity="center"
                android:textOff="@string/off"
                android:textOn="@string/on" />
        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color3"
        android:layout_below="@+id/lay1"
        android:layout_margin="10dp"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/sText"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:text="Sabah Namazı"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textColor="@color/krem"
                android:padding="5dp"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                />

            <Switch
                android:id="@+id/sSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:layout_gravity="center"
                android:textColor="@color/colorPrimary"
                android:text=""
                android:gravity="center"
                android:textOff="@string/off"
                android:textOn="@string/on" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/oText"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:text="Öğle Namazı"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textColor="@color/krem"
                android:padding="5dp"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                />

            <Switch
                android:id="@+id/oSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:layout_gravity="center"
                android:textColor="@color/colorPrimary"
                android:text=""
                android:gravity="center"
                android:textOff="@string/off"
                android:textOn="@string/on" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/iText"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:text="İkindi Namazı"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textColor="@color/krem"
                android:padding="5dp"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                />

            <Switch
                android:id="@+id/iSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:layout_gravity="center"
                android:textColor="@color/colorPrimary"
                android:text=""
                android:gravity="center"
                android:textOff="@string/off"
                android:textOn="@string/on" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/aText"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:text="Akşam Namazı"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textColor="@color/krem"
                android:padding="5dp"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                />

            <Switch
                android:id="@+id/aSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:layout_gravity="center"
                android:textColor="@color/colorPrimary"
                android:text=""
                android:gravity="center"
                android:textOff="@string/off"
                android:textOn="@string/on" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/yText"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:text="Yatsı Namazı"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textColor="@color/krem"
                android:padding="5dp"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                />

            <Switch
                android:id="@+id/ySwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:layout_gravity="center"
                android:textColor="@color/colorPrimary"
                android:text=""
                android:gravity="center"
                android:textOff="@string/off"
                android:textOn="@string/on" />
        </LinearLayout>

    </LinearLayout>




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/reklam_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="3dp"
            android:orientation="vertical"/>

        <LinearLayout
            android:id="@+id/reklam_layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/reklam_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="3dp"
            android:orientation="vertical" />

    </RelativeLayout>
</RelativeLayout>